@@ -8,6 +8,9 @@
 	* src/prompt.c (do_prompt, get_prompt_string): Don't pass the
 	menu, just set it earlier.
 	* src/prompt.c (get_prompt_string): Group the arguments better.
+	* src/global.c (shortcut_init), src/browser(do_filesearch): Show
+	that it is possible to have case-sensitive, regular-expressive,
+	and backwards searching in the file browser.
 
 2014-06-30  Mark Majeres  <mark@engine12.com>
 	* src/cut.c, src/global.c, src/nano.c: Rename 'cut_till_end' to
